prevent paragraphs making stuff too wide

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -39,6 +39,11 @@ button:disabled {
 }
 
 
+#fields-wrapper {
+    max-width: 852px;
+}
+
+
 /* Utilities */
 
 .text-start {
